# oil-areas-prediction

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
api/: main.py
dashboard/: index.html
data/: synthetic_dataset.csv
models/: ensemble_model.joblib  gradient_boosting_model.joblib  logistic_regression_model.joblib  metrics.json  oil_probability_model.joblib  random_forest_model.joblib
src/: generate_dataset.py  train_model.py
