[project]
name = "oil-areas-prediction"
version = "0.1.0"
description = "OBSAT oil-prone area prediction from methane/pressure readings and geolocation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
